Sale Report added

--- a/src/DataEntryUI/Pages/CategoryComponent.razor
+++ b/src/DataEntryUI/Pages/CategoryComponent.razor
@@ -1,6 +1,5 @@
 ﻿@page "/categories"
-
-<Microsoft.AspNetCore.Components.Web.PageTitle>Categories</Microsoft.AspNetCore.Components.Web.PageTitle>
+@attribute [Authorize]
 
 <PageComponent Title="Categories List">
     <Content>
