--- a/src/DataEntryUI/Pages/CustomerComponent.razor
+++ b/src/DataEntryUI/Pages/CustomerComponent.razor
@@ -1,6 +1,5 @@
 ﻿@page "/customers"
-
-<Microsoft.AspNetCore.Components.Web.PageTitle>Customer</Microsoft.AspNetCore.Components.Web.PageTitle>
+@attribute [Authorize]
 
 <PageComponent Title="Customer List">
     <Content>
