--- a/src/DataEntryUI/Pages/ProductComponent.razor
+++ b/src/DataEntryUI/Pages/ProductComponent.razor
@@ -1,6 +1,5 @@
 ﻿@page "/products"
-
-<Microsoft.AspNetCore.Components.Web.PageTitle>Products</Microsoft.AspNetCore.Components.Web.PageTitle>
+@attribute [Authorize]
 
 <PageComponent Title="Products List">
     <Content>
