--- a/src/DataEntryUI/Pages/Login.razor
+++ b/src/DataEntryUI/Pages/Login.razor
@@ -7,7 +7,7 @@
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
                 <a href="/" class="h1">
-                    <b>Book</b>Store
+                    <b>Date</b>Entry
                 </a>
             </div>
             <div class="card-body">
